Thu Feb 14 19:50:37 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Storable_Naming_Context_Factory.cpp:

          Added include of ace/pre.h.

        * orbsvcs/tests/ImplRepo/RestartServer/Terminator.cpp:
        * orbsvcs/tests/ImplRepo/scale_clients/client.cpp:

          Addressed a few compiler warnings.

Thu Feb 14 18:06:34 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * orbsvcs/orbsvcs/Naming/Storable_Naming_Context_Factory.h:

          Moved forward declaration for Storable_Factory into the versioned
          namespace declaration.

Thu Feb 14 16:27:21 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * orbsvcs/ImplRepo_Service/Config_Backing_Store.h:
        * orbsvcs/ImplRepo_Service/Locator_Repository.h:

        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Naming_Replication_Manager.cpp:
        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Naming_Server.h:
        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_PG_Group_Factory.h:

          Further changes to get to compile when versioned namespaces are used.

Thu Feb 14 14:28:58 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * orbsvcs/orbsvcs/Naming/Storable.h:
        * orbsvcs/orbsvcs/Naming/Storable.inl:

          Added initialization of type_ member to fix Coverity issue.

        * tests/Var_Deref:
        * tests/Var_Deref/README.txt:
        * tests/Var_Deref/Test.idl:
        * tests/Var_Deref/Var_Deref.mpc:
        * tests/Var_Deref/var_deref.cpp:

          Removed these files.  No longer needed since this feature
          was removed in the previous commit.

Wed Feb 13 19:25:06 UTC 2013  "Kevin Stanley"  <stanleyk@ociweb.com>

        * tao/Seq_Var_T.h:
        * tao/Seq_Var_T.inl:

          Backed out change which moved explicit point dereference operation
          from variable length vars to base so it can be applied to vars for
          fixed length types. Was causing issues with MSVC compilers related